# matterloop

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
matterloop-agents/: README.en.md  README.md  pyproject.toml
matterloop-agents/src/python/matterloop_agents/: __init__.py  _parsing.py  config.py  errors.py  planner.py  reviewer.py  verifier.py  worker.py
matterloop-agents/src/python/matterloop_agents/analysis/: __init__.py  models.py  rule_based.py
matterloop-agents/src/python/matterloop_agents/collaboration/: __init__.py  _immutability.py  artifacts.py  defaults.py  directory.py  endpoint.py  errors.py  events.py  messages.py  model_components.py  models.py  orchestrator.py  protocols.py  runtime.py  scheduler.py  stores.py  task_graph.py
matterloop-agents/src/python/matterloop_agents/communication/: __init__.py  _immutability.py  bus.py  contract.py  registry.py
matterloop-agents/src/python/matterloop_agents/evaluation/: __init__.py  dataset.py  loop.py  metrics.py
matterloop-agents/src/python/matterloop_agents/learning/: __init__.py  _text.py  engineering.py  failure_learning.py  memory_bridge.py  protocols.py  reuse.py  strategy.py
matterloop-agents/tests/: test_collaboration_directory.py  test_collaboration_model_components.py  test_collaboration_orchestrator.py  test_collaboration_stores.py  test_collaboration_task_graph.py  test_collaboration_team_loop.py  test_communication_bus.py  test_communication_contract.py  test_communication_registry.py  test_evaluation_loop.py  test_evaluation_metrics.py  test_failure_analysis.py  test_learning.py  test_live_deepseek.py  test_loop_engineering.py  test_memory_bridge.py  test_planner.py  test_verification.py  test_worker.py
matterloop-core/: README.en.md  README.md  pyproject.toml
matterloop-core/src/python/matterloop_core/: __init__.py
matterloop-core/src/python/matterloop_core/context/: __init__.py  checkpoint.py  (+2 more)
matterloop-core/tests/: conftest.py  test_checkpoint.py  test_human_feedback.py  test_loop.py  test_loop_controls.py  test_loop_resilience.py  test_registry.py  test_state.py
matterloop-integration-celery/: README.en.md  README.md  pyproject.toml
matterloop-integration-celery/src/python/matterloop_integration_celery/: __init__.py  codec.py  errors.py  producer.py  protocols.py  tasks.py
matterloop-integration-celery/tests/: fakes.py  test_codec.py  test_producer.py  test_tasks.py
matterloop-integration-fastapi/: README.en.md  README.md  pyproject.toml
matterloop-integration-fastapi/src/python/matterloop_integration_fastapi/: __init__.py  protocols.py  router.py  schemas.py
matterloop-integration-fastapi/tests/: test_router.py
matterloop-integration-redis/: LICENSE  README.en.md  README.md  pyproject.toml
matterloop-integration-redis/src/python/matterloop_integration_redis/: __init__.py  checkpoint.py  client.py  codec.py  errors.py  events.py  queue.py  repository.py
matterloop-integration-redis/tests/: test_redis_integration.py
matterloop-memory/: README.en.md  README.md  pyproject.toml
matterloop-memory/src/python/matterloop_memory/: __init__.py  base.py  episodic.py  in_memory.py  procedural.py  semantic.py  working.py
matterloop-memory/tests/: test_episodic_memory.py  test_memory.py  test_procedural_memory.py  test_semantic_memory.py  test_working_memory.py
matterloop-models/: README.en.md  README.md  pyproject.toml
matterloop-models/src/python/matterloop_models/: __init__.py  base.py  capabilities.py  custom.py  errors.py  fake.py  registry.py
matterloop-models/tests/: test_capabilities_registry.py  test_compatible_adapter.py  test_custom_client.py  test_deepseek_adapter.py  test_minimax_adapter.py  test_models.py  test_openai_adapter.py  test_provider_namespace.py  test_qwen_adapter.py  test_zhipu_adapter.py
matterloop-observability/: README.en.md  README.md  pyproject.toml
matterloop-observability/src/python/matterloop_observability/: __init__.py  bus.py  cost.py  exporter.py  handlers.py  live_tracing.py  logging.py  metrics.py  model_client.py  pipeline.py  publisher.py  redaction.py  router.py  scores.py  spans.py  trace_builder.py  tracing.py
matterloop-observability/tests/: test_cost_tracking.py  test_event_bus.py  test_event_router.py  test_exporter.py  test_lifecycle_handlers.py  test_live_tracing.py  test_model_client.py  test_observability.py  test_pipeline.py  test_scores.py  test_trace_builder.py
matterloop-policies/: README.en.md  README.md  pyproject.toml
matterloop-policies/src/python/matterloop_policies/: __init__.py  approval.py  budget.py  errors.py  metering.py  permissions.py  retry.py  security.py  stop.py  tenancy.py  usage.py  wrappers.py
matterloop-policies/tests/: test_policies.py  test_security.py  test_tenancy.py  test_usage_budget.py
matterloop-presets/: README.en.md  README.md  pyproject.toml
matterloop-presets/src/python/matterloop_presets/: __init__.py  _assembly.py  coding.py  config.py  errors.py  minimal.py  production.py  research.py  runtime.py
matterloop-presets/tests/: test_presets.py
matterloop-runtime/: README.en.md  README.md  pyproject.toml
matterloop-runtime/src/python/matterloop_runtime/: __init__.py  container.py  errors.py  facades.py  idempotency.py  ledger.py  py.typed  queueing.py  sandbox.py  transactional.py  worker.py
matterloop-runtime/tests/: test_container.py  test_execution_ledger.py  test_facades.py  test_idempotency.py  test_queue_worker.py  test_queueing.py  test_sandbox.py  test_transactional.py
matterloop-tools/: README.en.md  README.md  pyproject.toml
matterloop-tools/src/python/matterloop_tools/: __init__.py  base.py  errors.py  filesystem.py  http.py  registry.py  shell.py
matterloop-tools/tests/: test_filesystem.py  test_governance_access.py  test_governance_audit.py  test_governance_gateway.py  test_governance_policy.py  test_governance_quota.py  test_http.py  test_mcp.py  test_mcp_official_types.py  test_mcp_sdk_v1.py  test_registry.py  test_shell.py  test_skills_adapter.py  test_skills_loader.py  test_skills_registry.py
(+72 files in other folders)
