[project]
name = "matterloop-workspace"
version = "0.1.0"
description = "MatterLoop 多模块组件工程工作区"
requires-python = ">=3.10"
dependencies = [
    "matterloop-agents",
    "matterloop-core",
    "matterloop-integration-celery",
    "matterloop-integration-fastapi",
    "matterloop-integration-redis",
    "matterloop-memory",
    "matterloop-models[openai]",
    "matterloop-observability[otel]",
    "matterloop-policies",
    "matterloop-presets",
    "matterloop-runtime",
    "matterloop-tools",
]

[dependency-groups]
dev = [
    "build>=1.2",
    "httpx2>=2",
    "mypy>=1.10",
    "packaging>=24",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "tomli>=2; python_version < '3.11'",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["matterloop-*"]

[tool.uv.sources]
matterloop-agents = { workspace = true }
matterloop-core = { workspace = true }
matterloop-integration-celery = { workspace = true }
matterloop-integration-fastapi = { workspace = true }
matterloop-integration-redis = { workspace = true }
matterloop-memory = { workspace = true }
matterloop-models = { workspace = true }
matterloop-observability = { workspace = true }
matterloop-policies = { workspace = true }
matterloop-presets = { workspace = true }
matterloop-runtime = { workspace = true }
matterloop-tools = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = [
    "matterloop-agents/src/python",
    "matterloop-core/src/python",
    "matterloop-integration-celery/src/python",
    "matterloop-integration-fastapi/src/python",
    "matterloop-integration-redis/src/python",
    "matterloop-memory/src/python",
    "matterloop-models/src/python",
    "matterloop-observability/src/python",
    "matterloop-policies/src/python",
    "matterloop-presets/src/python",
    "matterloop-runtime/src/python",
    "matterloop-tools/src/python",
]
files = [
    "examples",
    "matterloop-agents/src/python",
    "matterloop-core/src/python",
    "matterloop-integration-celery/src/python",
    "matterloop-integration-fastapi/src/python",
    "matterloop-integration-redis/src/python",
    "matterloop-memory/src/python",
    "matterloop-models/src/python",
    "matterloop-observability/src/python",
    "matterloop-policies/src/python",
    "matterloop-presets/src/python",
    "matterloop-runtime/src/python",
    "matterloop-tools/src/python",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "matterloop-agents/tests",
    "matterloop-core/tests",
    "matterloop-integration-celery/tests",
    "matterloop-integration-fastapi/tests",
    "matterloop-integration-redis/tests",
    "matterloop-memory/tests",
    "matterloop-models/tests",
    "matterloop-observability/tests",
    "matterloop-policies/tests",
    "matterloop-presets/tests",
    "matterloop-runtime/tests",
    "matterloop-tools/tests",
]
python_files = ["test_*.py"]
addopts = "-q --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "live_deepseek: 显式访问 DeepSeek 真实端点的限额端到端测试",
]
pythonpath = [
    ".",
    "matterloop-core/tests",
    "matterloop-integration-celery/tests",
]

[tool.coverage.run]
branch = true
source = [
    "matterloop_agents",
    "matterloop_core",
    "matterloop_integration_celery",
    "matterloop_integration_fastapi",
    "matterloop_integration_redis",
    "matterloop_memory",
    "matterloop_models",
    "matterloop_observability",
    "matterloop_policies",
    "matterloop_presets",
    "matterloop_runtime",
    "matterloop_tools",
]

[tool.coverage.report]
fail_under = 75
precision = 1
show_missing = true
skip_empty = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
    '\.\.\.',
]
