[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "matterloop-integration-redis"
version = "0.1.0"
description = "MatterLoop Redis 队列、运行状态与事件集成"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "matterloop-core>=0.1.0,<0.2.0",
    "matterloop-runtime>=0.1.0,<0.2.0",
    "redis>=5,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python/matterloop_integration_redis"]
