[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "matterloop-models"
version = "0.1.2"
description = "Provider-neutral model APIs and provider adapters for MatterLoop"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MatterLoop Contributors" }]
keywords = ["agent", "ai", "llm", "matterloop", "models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/huleidada/matterloop"
Documentation = "https://github.com/huleidada/matterloop/tree/main/docs"
Repository = "https://github.com/huleidada/matterloop"
Issues = "https://github.com/huleidada/matterloop/issues"

[project.optional-dependencies]
openai = ["openai>=1.66.0,<3.0.0"]
dev = ["mypy>=1.10", "pytest>=8.0", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/python/matterloop_models"]
