[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "matterloop-policies"
version = "0.1.0"
description = "MatterLoop 预算、重试、停止、审批与权限策略"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "matterloop-core>=0.1.0,<0.2.0",
    "matterloop-models>=0.1.0,<0.2.0",
    "matterloop-tools>=0.1.0,<0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python/matterloop_policies"]
