[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "matterloop-presets"
version = "0.1.0"
description = "MatterLoop 开箱即用运行时预设"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "matterloop-agents>=0.1.0,<0.2.0",
    "matterloop-core>=0.1.0,<0.2.0",
    "matterloop-memory>=0.1.0,<0.2.0",
    "matterloop-models>=0.1.0,<0.2.0",
    "matterloop-observability>=0.1.0,<0.2.0",
    "matterloop-policies>=0.1.0,<0.2.0",
    "matterloop-runtime>=0.1.0,<0.2.0",
    "matterloop-tools>=0.1.0,<0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python/matterloop_presets"]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]
