[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "matterloop-presets"
version = "0.1.2"
description = "MatterLoop 开箱即用运行时预设"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MatterLoop Contributors" }]
keywords = ["agent", "ai", "matterloop", "presets", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "matterloop-agents>=0.1.2,<0.2.0",
    "matterloop-core>=0.1.2,<0.2.0",
    "matterloop-memory>=0.1.2,<0.2.0",
    "matterloop-models>=0.1.2,<0.2.0",
    "matterloop-observability>=0.1.2,<0.2.0",
    "matterloop-policies>=0.1.2,<0.2.0",
    "matterloop-runtime>=0.1.2,<0.2.0",
    "matterloop-tools>=0.1.2,<0.2.0",
]

[project.urls]
Homepage = "https://github.com/huleidada/matterloop"
Documentation = "https://github.com/huleidada/matterloop/tree/main/docs"
Repository = "https://github.com/huleidada/matterloop"
Issues = "https://github.com/huleidada/matterloop/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/python/matterloop_presets"]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]
