[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "matterloop-runtime"
version = "0.1.1"
description = "Runtime, queue, sandbox, and lifecycle components for MatterLoop"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MatterLoop Contributors" }]
keywords = ["agent", "matterloop", "queue", "runtime", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["matterloop-core>=0.1.1,<0.2.0"]

[project.urls]
Homepage = "https://github.com/huleidada/matterloop"
Documentation = "https://github.com/huleidada/matterloop/tree/main/docs"
Repository = "https://github.com/huleidada/matterloop"
Issues = "https://github.com/huleidada/matterloop/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python/matterloop_runtime"]
