[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "matterloop-tools"
version = "0.1.0"
description = "Permission-aware tools for MatterLoop agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MatterLoop Contributors" }]
dependencies = [
    "httpx>=0.27,<1",
    "matterloop-runtime>=0.1.0,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python/matterloop_tools"]
